Update: - Version 2024.03.08 - Added the ability to upload and retrieve photos from the cloud for records. This gives the user the ability to take a photo of their receipt or a screenshot of an invoice and keep track of it with their maintenance record.
(Previous)
- Cleaned up backend coding.
- Version 2023.08.10

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -39,36 +40,34 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/login_email_input"
-                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:hint="Email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
                     android:autofillHints="emailAddress"
                     android:importantForAutofill="yes"
-                    android:visibility="gone"
-                    />
+                    android:inputType="textEmailAddress"
+                    android:visibility="gone" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/login_password_input"
-                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:hint="Password">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
                     android:autofillHints="password"
                     android:importantForAutofill="yes"
-                    android:visibility="gone"
-                    />
+                    android:inputType="textPassword"
+                    android:visibility="gone" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
@@ -124,7 +123,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
