--- a/app/src/main/res/layout/popup_delete_auth.xml
+++ b/app/src/main/res/layout/popup_delete_auth.xml
@@ -2,23 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="15dp">
 
     <TextView
         android:id="@+id/textView38"
+        style="@style/MyAppTheme.Titles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Delete Account"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:text="Delete Account" />
 
     <LinearLayout
+        style="@style/AppTheme.TextFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -31,15 +30,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:importantForAutofill="auto"
-                android:inputType="textPassword"
-                />
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
+        style="@style/AppTheme.TextFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -52,8 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:importantForAutofill="auto"
-                android:inputType="textPassword"
-                />
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
@@ -61,6 +58,7 @@
         android:id="@+id/confirm_btns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:theme="@style/AppTheme.Buttons">
@@ -69,14 +67,13 @@
             android:id="@+id/delete_cancel_btn"
             android:layout_width="@dimen/popout_btn_width"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Cancel" />
+            android:text="Cancel"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/delete_confirm_btn"
             android:layout_width="@dimen/popout_btn_width"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:text="Confirm" />
     </LinearLayout>
 
