--- a/app/src/main/res/layout/popup_update_profile.xml
+++ b/app/src/main/res/layout/popup_update_profile.xml
@@ -8,95 +8,83 @@
 
     <TextView
         android:id="@+id/textView39"
+        style="@style/MyAppTheme.Titles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="Update Profile:"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:text="Update Profile:" />
 
     <LinearLayout
         android:id="@+id/firstName"
+        style="@style/AppTheme.TextFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/update_first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:hint="First Name">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:importantForAutofill="auto"
                 android:autofillHints="name"
-                android:inputType="textPersonName"
-                />
+                android:importantForAutofill="auto"
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/lastName"
+        style="@style/AppTheme.TextFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/update_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:hint="Last Name">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:importantForAutofill="auto"
                 android:autofillHints="name"
-                android:inputType="textPersonName"
-                />
+                android:importantForAutofill="auto"
+                android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/newEmail"
+        style="@style/AppTheme.TextFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/update_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:hint="Email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:importantForAutofill="auto"
                 android:autofillHints="emailAddress"
-                android:inputType="textEmailAddress"
-                />
+                android:importantForAutofill="auto"
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/oldPassword"
+        style="@style/AppTheme.TextFields"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/update_old_password"
@@ -107,10 +95,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:importantForAutofill="yes"
                 android:autofillHints="password"
-                android:inputType="textPassword"
-                />
+                android:importantForAutofill="yes"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
@@ -118,6 +105,8 @@
         android:id="@+id/update_btns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:theme="@style/AppTheme.Buttons">
@@ -126,14 +115,13 @@
             android:id="@+id/update_cancel_btn"
             android:layout_width="@dimen/popout_btn_width"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Cancel" />
+            android:text="Cancel"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/update_btn"
             android:layout_width="@dimen/popout_btn_width"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:text="Update" />
     </LinearLayout>
 
