--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,65 @@
     <color name="red">#FFBC0000</color>
     <color name="task_due_today">#FFFF8F</color>
     <color name="task_overdue">#E97451</color>
+
+    <color name="md_theme_light_primary">#8D4F00</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFDCC0</color>
+    <color name="md_theme_light_onPrimaryContainer">#2D1600</color>
+    <color name="md_theme_light_secondary">#735943</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFDCC0</color>
+    <color name="md_theme_light_onSecondaryContainer">#291806</color>
+    <color name="md_theme_light_tertiary">#596239</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#DEE8B3</color>
+    <color name="md_theme_light_onTertiaryContainer">#171E00</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FFFBFF</color>
+    <color name="md_theme_light_onBackground">#201B17</color>
+    <color name="md_theme_light_surface">#FFFBFF</color>
+    <color name="md_theme_light_onSurface">#201B17</color>
+    <color name="md_theme_light_surfaceVariant">#F2DFD1</color>
+    <color name="md_theme_light_onSurfaceVariant">#51443A</color>
+    <color name="md_theme_light_outline">#837469</color>
+    <color name="md_theme_light_inverseOnSurface">#FAEFE7</color>
+    <color name="md_theme_light_inverseSurface">#352F2B</color>
+    <color name="md_theme_light_inversePrimary">#FFB875</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#8D4F00</color>
+    <color name="md_theme_light_outlineVariant">#D5C3B6</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#FFB875</color>
+    <color name="md_theme_dark_onPrimary">#4B2800</color>
+    <color name="md_theme_dark_primaryContainer">#6B3B00</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDCC0</color>
+    <color name="md_theme_dark_secondary">#E2C0A4</color>
+    <color name="md_theme_dark_onSecondary">#412C19</color>
+    <color name="md_theme_dark_secondaryContainer">#59422D</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDCC0</color>
+    <color name="md_theme_dark_tertiary">#C2CC99</color>
+    <color name="md_theme_dark_onTertiary">#2C340F</color>
+    <color name="md_theme_dark_tertiaryContainer">#424A23</color>
+    <color name="md_theme_dark_onTertiaryContainer">#DEE8B3</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#201B17</color>
+    <color name="md_theme_dark_onBackground">#ECE0D9</color>
+    <color name="md_theme_dark_surface">#201B17</color>
+    <color name="md_theme_dark_onSurface">#ECE0D9</color>
+    <color name="md_theme_dark_surfaceVariant">#51443A</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D5C3B6</color>
+    <color name="md_theme_dark_outline">#9E8E81</color>
+    <color name="md_theme_dark_inverseOnSurface">#201B17</color>
+    <color name="md_theme_dark_inverseSurface">#ECE0D9</color>
+    <color name="md_theme_dark_inversePrimary">#8D4F00</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#FFB875</color>
+    <color name="md_theme_dark_outlineVariant">#51443A</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
