--- a/app/src/main/res/layout-land/vehicle_view.xml
+++ b/app/src/main/res/layout-land/vehicle_view.xml
@@ -1,72 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/vehicle_material_card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:theme="@style/MyAppTheme.H1">
-
-        <TextView
-            android:id="@+id/vehicle_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Year" />
-
-        <TextView
-            android:id="@+id/vehicle_make"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Make" />
-
-        <TextView
-            android:id="@+id/vehicle_model"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Model" />
-
-        <TextView
-            android:id="@+id/vehicle_submodel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Submodel" />
-
-        <TextView
-            android:id="@+id/vehicle_engine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="Engine" />
-
-    </LinearLayout>
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:theme="@style/MyAppTheme.H3">
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notes:" />
+            android:orientation="horizontal"
+            android:theme="@style/MyAppTheme.H1">
+
+            <TextView
+                android:id="@+id/vehicle_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Year" />
+
+            <TextView
+                android:id="@+id/vehicle_make"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Make" />
+
+            <TextView
+                android:id="@+id/vehicle_model"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Model" />
+
+            <TextView
+                android:id="@+id/vehicle_engine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Engine"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/vehicle_notes"
-            android:layout_width="match_parent"
+            android:id="@+id/vehicle_submodel"
+            style="@style/MyAppTheme.H3"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:paddingStart="10dp"
-            android:text="(Optional)" />
+            android:text="Submodel" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:theme="@style/MyAppTheme.H3"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notes:" />
+
+            <TextView
+                android:id="@+id/vehicle_notes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:paddingStart="10dp"
+                android:text="(Optional)" />
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
