--- a/app/src/main/res/layout/popup_filter_records.xml
+++ b/app/src/main/res/layout/popup_filter_records.xml
@@ -41,5 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="Cancel"
+        android:visibility="gone"
         app:theme="@style/AppTheme.Buttons" />
 </LinearLayout>
