--- a/app/src/main/res/layout/popup_sort.xml
+++ b/app/src/main/res/layout/popup_sort.xml
@@ -180,6 +180,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="Cancel"
+        android:visibility="gone"
         app:theme="@style/AppTheme.Buttons" />
 
 </LinearLayout>
