--- a/app/src/main/res/layout/record_view.xml
+++ b/app/src/main/res/layout/record_view.xml
@@ -69,7 +69,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:theme="@style/MyAppTheme.H4">
+            android:theme="@style/MyAppTheme.H4"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/textView31"
