--- a/app/src/main/res/layout/vehicle_view.xml
+++ b/app/src/main/res/layout/vehicle_view.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/vehicle_material_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:checkable="true"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp" >
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +62,8 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="Engine"
-            android:theme="@style/MyAppTheme.H3" />
+            android:theme="@style/MyAppTheme.H3"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/vehicle_notes_layout"
@@ -66,7 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:theme="@style/MyAppTheme.H4">
+            android:theme="@style/MyAppTheme.H4"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/textView7"
